#577 Support Java Migrations
#577 Support Java Migrations - integrated review comments